menu responsive way

--- a/app/includes/menu.jade
+++ b/app/includes/menu.jade
@@ -1,16 +1,15 @@
-.row
-  .col-md-2.col-md-offset-1
-    img(src='images/Menu-Magics-Logo.png')
-  .col-md-6
-    ul.nav.nav-pills
-      li.active
-        a(href='#Products') Products
-      li
-        a(href='#About') About
-      li
-        a(href='#Contact') Contact
-      li
-        a(href='#') Order Online
-  .col-md-2.col-md-offset-2
-    a(href='http://www.drylock.eu/')
-      img(src='images/Menu-Drylock-Logo.png')
+.col-md-2.hidden-xs.hidden-sm
+  img.menu-magics-logo(src='images/Menu-Magics-Logo.png')
+.col-md-8.menu.col-xs-12.col-sm-12
+  ul.nav.nav-pills
+    li.active
+      a(href='#Products') Products
+    li.active
+      a(href='#About') About
+    li.active
+      a(href='#Contact') Contact
+    li
+      a.longer(href='#') Order Online
+.col-md-2.hidden-xs.hidden-sm
+  a.menu-drylock-logo(href='http://www.drylock.eu/')
+    img(src='images/Menu-Drylock-Logo.png')
