--- a/app/index.jade
+++ b/app/index.jade
@@ -22,14 +22,15 @@ html(class="no-js", lang="en")
     link(rel='stylesheet', href='css/app.css')
   body
     .container
-      .row-fluid
-        .span12.magics-main-logo
+      .row
+        .col-md-12.magics-main-logo
           img(alt='Magics', src='images/Magics-Logo.png')
         .span12.loading-circle
           img(alt='Magics', src='images/Loading.gif')
         .span12.loading-claim The revolutionary thin diaper
 
-      include includes/menu
+      .row.products-menu
+        include includes/menu
 
 
       .body
