--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -18,37 +18,51 @@ body
   background-repeat no-repeat
   font-family Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif
 
-.menu
+.menu > ul
   text-transform uppercase
   font-size 20px
   font-weight normal
-
-
-.menu > ul
+  margin 0 auto
   border-radius 8px
   background url(/images/Menu-Background.png) no-repeat
   background-position 50% 50%
   width 607px
 
 .menu > ul > li
-  padding 11px 22px
+  padding 11px 7px
 
 .menu > ul > li > a
   color #fff
-  padding 5px 8px
+  width 130px
+  text-align center
 
+.menu > ul > li > a.longer
+  width 154px
 
-.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {
+.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus
   background: none
-}
 
 .nav-pills>li.active
   background url(/images/Menu-Selected.png) no-repeat
+  background-position 50% 50%
 
-.nav>li>a:hover, .nav>li>a:focus {
-  text-decoration: none;
-  background-color: #151C64;
-}
+.nav>li>a:hover, .nav>li>a:focus
+  text-decoration none
+  background-color #151C64
+
+.menu-magics-logo
+  float right
+  position relative
+  top -15px
+  left 10px
+
+.menu-drylock-logo
+  position relative
+  top 11px
+  left -10px
+
+.products-menu
+  margin-top 263px
 
 
 .body
