--- a/public/css/app.css
+++ b/public/css/app.css
@@ -619,12 +619,11 @@ body {
   background-repeat: no-repeat;
   font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
-.menu {
+.menu > ul {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: normal;
-}
-.menu > ul {
+  margin: 0 auto;
   -webkit-border-radius: 8px;
   border-radius: 8px;
   background: url("/images/Menu-Background.png") no-repeat;
@@ -632,11 +631,15 @@ body {
   width: 607px;
 }
 .menu > ul > li {
-  padding: 11px 22px;
+  padding: 11px 7px;
 }
 .menu > ul > li > a {
   color: #fff;
-  padding: 5px 8px;
+  width: 130px;
+  text-align: center;
+}
+.menu > ul > li > a.longer {
+  width: 154px;
 }
 .nav-pills>li.active>a,
 .nav-pills>li.active>a:hover,
@@ -645,11 +648,26 @@ body {
 }
 .nav-pills>li.active {
   background: url("/images/Menu-Selected.png") no-repeat;
+  background-position: 50% 50%;
 }
 .nav>li>a:hover,
 .nav>li>a:focus {
   text-decoration: none;
   background-color: #151c64;
+}
+.menu-magics-logo {
+  float: right;
+  position: relative;
+  top: -15px;
+  left: 10px;
+}
+.menu-drylock-logo {
+  position: relative;
+  top: 11px;
+  left: -10px;
+}
+.products-menu {
+  margin-top: 263px;
 }
 .body {
   height: 2500px;
