most of the structure using bootstrap responsive design

--- a/app/views/styles/_base.styl
+++ b/app/views/styles/_base.styl
@@ -3,11 +3,14 @@
 
 html,
 body
-    height 100%
     width 100%
+    font-family Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif
 
 body,
 input
-    font-family "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif
     font-weight 300
     text-rendering optimizeLegibility
+
+
+.cf
+  clearfix()
