--- a/app/includes/menu.jade
+++ b/app/includes/menu.jade
@@ -1,15 +1,16 @@
-.col-md-2.hidden-xs.hidden-sm
-  img.menu-magics-logo(src='images/Menu-Magics-Logo.png')
-.col-md-8.menu.col-xs-12.col-sm-12
-  ul.nav.nav-pills
-    li.active
-      a(href='#Products') Products
-    li.active
-      a(href='#About') About
-    li.active
-      a(href='#Contact') Contact
-    li
-      a.longer(href='#') Order Online
-.col-md-2.hidden-xs.hidden-sm
-  a.menu-drylock-logo(href='http://www.drylock.eu/')
-    img(src='images/Menu-Drylock-Logo.png')
+.row
+  .col-md-2.hidden-xs.hidden-sm
+    img.menu-magics-logo(src='images/Menu-Magics-Logo.png')
+  .col-md-8.menu.col-xs-12.col-sm-12
+    ul.nav.nav-pills
+      li.active
+        a(href='#Products') Products
+      li.active
+        a(href='#About') About
+      li.active
+        a(href='#Contact') Contact
+      li
+        a.longer(href='#') Order Online
+  .col-md-2.hidden-xs.hidden-sm
+    a.menu-drylock-logo(href='http://www.drylock.eu/')
+      img(src='images/Menu-Drylock-Logo.png')
