--- a/app/index.jade
+++ b/app/index.jade
@@ -7,35 +7,44 @@ doctype
     <html class="no-js lt-ie9">
 // [if gt IE 8] <!
 html(class="no-js", lang="en")
-    // <![endif]
+  // <![endif]
+
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    title
+    title Magics - THE REVOLUTIONARY THIN DIAPER
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width')
-    //
-       Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons
-    script
-      // Enable Brunch HTML/CSS Auto Reload
-      window.brunch = window.brunch || {};
+    script window.brunch = window.brunch || {};
+    link(rel='stylesheet', href='MyFontsWebfontsKit.css')
     link(rel='stylesheet', href='css/app.css')
+
   body
     .container
-      .row
-        .col-md-12.magics-main-logo
-          img(alt='Magics', src='images/Magics-Logo.png')
-        .span12.loading-circle
-          img(alt='Magics', src='images/Loading.gif')
-        .span12.loading-claim The revolutionary thin diaper
+      // Loading
+      .loading
+        include includes/loading
 
-      .row.products-menu
+      // Products
+      .products
         include includes/menu
+        include includes/products
+
+      // About
+      .about
+        include includes/menu
+        include includes/about
 
 
-      .body
-      .footer
-        p x
+      // Contact
+      .contact
+        include includes/menu
+        include includes/contact
+
+      // Footer
+      .footer.cf
+        p All Rights Reserved Drylock Technologies | 2013 -2014 Created by Wercajk
+
     script(src='js/app.js', onload='require(\'initialize\');')
     script.
       var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
