--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -1,5 +1,9 @@
 @import 'nib'
+@import '_fonts'
 @import '_base'
+@import '_menu'
+
+
 
 .browsehappy
   margin 0.2em 0
@@ -7,72 +11,23 @@
   color #000
   padding 0.2em 0
 
-
-/* Space out content a bit */
 body
-  padding-top 20px
-  padding-bottom 20px
+  height 4848px
   // background url(/images/background.jpg)
   background url(/images/master-color.jpg)
+  // background url(/images/master.jpg)
   background-position 50% 0
   background-repeat no-repeat
-  font-family Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif
 
-.menu > ul
-  text-transform uppercase
-  font-size 20px
-  font-weight normal
-  margin 0 auto
-  border-radius 8px
-  background url(/images/Menu-Background.png) no-repeat
-  background-position 50% 50%
-  width 607px
-
-.menu > ul > li
-  padding 11px 7px
-
-.menu > ul > li > a
-  color #fff
-  width 130px
-  text-align center
-
-.menu > ul > li > a.longer
-  width 154px
-
-.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus
-  background: none
-
-.nav-pills>li.active
-  background url(/images/Menu-Selected.png) no-repeat
-  background-position 50% 50%
-
-.nav>li>a:hover, .nav>li>a:focus
-  text-decoration none
-  background-color #151C64
-
-.menu-magics-logo
-  float right
-  position relative
-  top -15px
-  left 10px
-
-.menu-drylock-logo
-  position relative
-  top 11px
-  left -10px
-
-.products-menu
-  margin-top 263px
-
-
-.body
-  height 2500px
-
-
+// Loading
+.loading
+  position absolute
+  top 96px
+  left 0
+  width 100%
 
 .magics-main-logo
   text-align center
-  margin-top 78px
 
 .loading-circle
   text-align center
@@ -83,9 +38,103 @@ body
   text-align center
   text-transform uppercase
   font-size 33px
-  font-wight bold
+  font-weight bold
   color #fff
 
 
+// Products
+.products
+  position absolute
+  top 880px
+  color #141a62
+
+  .products-content
+    margin-top 85px
+
+  .diapers-2
+    padding-top 115px
+    padding-left 35px
+
+  .diapers-detail img
+    position relative
+    top -28px
+    left -6px
+
+  .diapers-detail .number-circle
+    position relative
+    top -5px
+    left -18px
+
+  .diapers-info .title
+    font-size 40px
+    line-height 1.03
+    font-weight bold
+
+  .diapers-info .weight
+    font-size 30px
+    line-height 0.9
+
+  .diapers-info .description
+    font-size 17px
+
+  .number-circle
+    font-family FontoonCom
+    font-style roman
+    border-radius 50%
+    behavior url(PIE.htc)
+    width 40px
+    height 40px
+    padding 4px
+    color #fff
+    font-size 25px
+    text-align center
+    font-weight normal
+
+  .number-orange
+    background #ff8300
+  .number-yellow
+    background #fcd003
+  .number-green
+    background #72bd44
+  .number-pink
+    background #d91369
+  .number-blue
+    background #00aced
+  .number-violet
+    background #5a3f97
 
 
+
+// About
+.about
+  position absolute
+  top 2365px
+
+  .headline
+    padding-left 41px
+
+    h2
+      color #D91369
+      font-size 40px
+      margin-top 54px
+      margin-bottom 5px
+      fontoon()
+
+    h3
+      color #FFF
+      font-size 27px
+      margin-top 0px
+      margin-left 3px
+      fontoon()
+
+
+// Contact
+.contact
+  position absolute
+  top 3964px
+
+
+// Footer
+.footer
+  position absolute
+  top 4200px
