new fixed approach for parallax scroll

--- a/app/assets/includes/loading.html
+++ b/app/assets/includes/loading.html
@@ -1,1 +1,1 @@
-<div class="row"><div class="col-md-12 magics-main-logo"><img alt="Magics" src="images/Magics-Logo.png"/></div><div class="span12 loading-circle"><img alt="Magics" src="images/Loading.gif"/></div><div class="span12 loading-claim">The revolutionary thin diaper</div></div>
+<div class="page-center"><div class="magics-main-logo"><img alt="Magics" src="images/Magics-Logo.png"/></div><div class="loading-circle"><img alt="Magics" src="images/Loading.gif"/></div><div class="loading-claim">The revolutionary thin diaper</div></div>
