--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -3,31 +3,28 @@
 @import '_base'
 @import '_menu'
 
-
-
-.browsehappy
-  margin 0.2em 0
-  background #ccc
-  color #000
-  padding 0.2em 0
-
 body
-  height 4848px
   // background url(/images/background.jpg)
   background url(/images/master-color.jpg)
   // background url(/images/master.jpg)
   background-position 50% 0
   background-repeat no-repeat
 
-// Loading
-.loading
-  position absolute
-  top 96px
-  left 0
-  width 100%
+
+.page
+  position fixed
+  top 0px
+  height 0px
+  visibility visible
+
+.page-center
+  width 1020px
+  position relative
+  margin 0px auto
 
 .magics-main-logo
   text-align center
+  margin-top 97px
 
 .loading-circle
   text-align center
