--- a/app/includes/loading.jade
+++ b/app/includes/loading.jade
@@ -1,6 +1,6 @@
-.row
-  .col-md-12.magics-main-logo
+.page-center
+  .magics-main-logo
     img(alt='Magics', src='images/Magics-Logo.png')
-  .span12.loading-circle
+  .loading-circle
     img(alt='Magics', src='images/Loading.gif')
-  .span12.loading-claim The revolutionary thin diaper
+  .loading-claim The revolutionary thin diaper
