--- a/public/css/app.css
+++ b/public/css/app.css
@@ -671,26 +671,25 @@ input {
   text-decoration: none;
   background-color: none;
 }
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
 body {
-  height: 4848px;
   background: url("/images/master-color.jpg");
   background-position: 50% 0;
   background-repeat: no-repeat;
 }
-.loading {
-  position: absolute;
-  top: 96px;
-  left: 0;
-  width: 100%;
+.page {
+  position: fixed;
+  top: 0px;
+  height: 0px;
+  visibility: visible;
+}
+.page-center {
+  width: 1020px;
+  position: relative;
+  margin: 0px auto;
 }
 .magics-main-logo {
   text-align: center;
+  margin-top: 97px;
 }
 .loading-circle {
   text-align: center;
