--- a/app/includes/loading.jade
+++ b/app/includes/loading.jade
@@ -1,6 +1,6 @@
 .page-center
-  .magics-main-logo
+  .logo
     img(alt='Magics', src='images/Magics-Logo.png')
-  .loading-circle
+  .circle
     img(alt='Magics', src='images/Loading.gif')
-  .loading-claim The revolutionary thin diaper
+  .claim The revolutionary thin diaper
