--- a/app/index.jade
+++ b/app/index.jade
@@ -21,23 +21,23 @@ html(class="no-js", lang="en")
 
   body
     // Loading
-    .page.page_loading
+    .loading
       include includes/loading
 
-      //- // Products
-      //- .products
-      //-   include includes/menu
-      //-   include includes/products
+    // Products
+    .products
+      include includes/menu
+      //- include includes/products
 
-      //- // About
-      //- .about
-      //-   include includes/menu
+    // About
+    .about
+      include includes/menu
       //-   include includes/about
 
 
-      //- // Contact
-      //- .contact
-      //-   include includes/menu
+    // Contact
+    .contact
+      include includes/menu
       //-   include includes/contact
 
       //- // Footer
