--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -11,127 +11,103 @@ body
   background-repeat no-repeat
 
 
-.page
-  position fixed
-  top 0px
-  height 0px
-  visibility visible
+@import 'loading'
 
-.page-center
-  width 1020px
-  position relative
-  margin 0px auto
+@import 'products'
 
-.magics-main-logo
-  text-align center
-  margin-top 97px
+// // Products
+// .products
+//   position absolute
+//   top 880px
+//   color #141a62
 
-.loading-circle
-  text-align center
-  margin-top 44px
-  margin-bottom 38px
+//   .products-content
+//     margin-top 85px
 
-.loading-claim
-  text-align center
-  text-transform uppercase
-  font-size 33px
-  font-weight bold
-  color #fff
+//   .diapers-2
+//     padding-top 115px
+//     padding-left 35px
 
+//   .diapers-detail img
+//     position relative
+//     top -28px
+//     left -6px
 
-// Products
-.products
-  position absolute
-  top 880px
-  color #141a62
+//   .diapers-detail .number-circle
+//     position relative
+//     top -5px
+//     left -18px
 
-  .products-content
-    margin-top 85px
+//   .diapers-info .title
+//     font-size 40px
+//     line-height 1.03
+//     font-weight bold
 
-  .diapers-2
-    padding-top 115px
-    padding-left 35px
+//   .diapers-info .weight
+//     font-size 30px
+//     line-height 0.9
 
-  .diapers-detail img
-    position relative
-    top -28px
-    left -6px
+//   .diapers-info .description
+//     font-size 17px
 
-  .diapers-detail .number-circle
-    position relative
-    top -5px
-    left -18px
+//   .number-circle
+//     font-family FontoonCom
+//     font-style roman
+//     border-radius 50%
+//     behavior url(PIE.htc)
+//     width 40px
+//     height 40px
+//     padding 4px
+//     color #fff
+//     font-size 25px
+//     text-align center
+//     font-weight normal
 
-  .diapers-info .title
-    font-size 40px
-    line-height 1.03
-    font-weight bold
-
-  .diapers-info .weight
-    font-size 30px
-    line-height 0.9
-
-  .diapers-info .description
-    font-size 17px
-
-  .number-circle
-    font-family FontoonCom
-    font-style roman
-    border-radius 50%
-    behavior url(PIE.htc)
-    width 40px
-    height 40px
-    padding 4px
-    color #fff
-    font-size 25px
-    text-align center
-    font-weight normal
-
-  .number-orange
-    background #ff8300
-  .number-yellow
-    background #fcd003
-  .number-green
-    background #72bd44
-  .number-pink
-    background #d91369
-  .number-blue
-    background #00aced
-  .number-violet
-    background #5a3f97
+//   .number-orange
+//     background #ff8300
+//   .number-yellow
+//     background #fcd003
+//   .number-green
+//     background #72bd44
+//   .number-pink
+//     background #d91369
+//   .number-blue
+//     background #00aced
+//   .number-violet
+//     background #5a3f97
 
 
 
-// About
-.about
-  position absolute
-  top 2365px
+// // About
+// .about
+//   position absolute
+//   top 2365px
 
-  .headline
-    padding-left 41px
+//   .headline
+//     padding-left 41px
 
-    h2
-      color #D91369
-      font-size 40px
-      margin-top 54px
-      margin-bottom 5px
-      fontoon()
+//     h2
+//       color #D91369
+//       font-size 40px
+//       margin-top 54px
+//       margin-bottom 5px
+//       fontoon()
 
-    h3
-      color #FFF
-      font-size 27px
-      margin-top 0px
-      margin-left 3px
-      fontoon()
-
-
-// Contact
-.contact
-  position absolute
-  top 3964px
+//     h3
+//       color #FFF
+//       font-size 27px
+//       margin-top 0px
+//       margin-left 3px
+//       fontoon()
 
 
-// Footer
-.footer
-  position absolute
-  top 4200px
+// // Contact
+// .contact
+//   position absolute
+//   top 3964px
+
+
+// // Footer
+// .footer
+//   position absolute
+//   top 4200px
