--- a/public/css/app.css
+++ b/public/css/app.css
@@ -627,6 +627,7 @@ input {
 }
 .menu > ul > li {
   padding: 11px 7px;
+  margin-top: 16px;
 }
 .menu > ul > li > a {
   color: #fff;
@@ -635,15 +636,13 @@ input {
 }
 .menu > ul > li > a.longer {
   width: 154px;
+  padding-left: 0;
+  padding-right: 0;
 }
 .nav-pills>li.active>a,
 .nav-pills>li.active>a:hover,
 .nav-pills>li.active>a:focus {
   background: none;
-}
-.nav-pills>li.active {
-  background: url("/images/Menu-Selected.png") no-repeat;
-  background-position: 50% 50%;
 }
 .nav>li>a:hover,
 .nav>li>a:focus {
@@ -659,9 +658,6 @@ input {
   float: right;
   position: relative;
 }
-.products-menu {
-  margin-top: 263px;
-}
 .nav>li>a:hover,
 .nav>li>a:focus {
   text-decoration: none;
@@ -671,135 +667,57 @@ input {
   text-decoration: none;
   background-color: none;
 }
+.products .products-link {
+  background: url("/images/Menu-Selected.png") no-repeat;
+  background-position: 50% 50%;
+}
+.about .about-link {
+  background: url("/images/Menu-Selected.png") no-repeat;
+  background-position: 50% 50%;
+}
+.contact .contact-link {
+  background: url("/images/Menu-Selected.png") no-repeat;
+  background-position: 50% 50%;
+}
 body {
   background: url("/images/master-color.jpg");
   background-position: 50% 0;
   background-repeat: no-repeat;
 }
-.page {
-  position: fixed;
-  top: 0px;
-  height: 0px;
-  visibility: visible;
-}
-.page-center {
-  width: 1020px;
-  position: relative;
-  margin: 0px auto;
-}
-.magics-main-logo {
+.loading .logo {
   text-align: center;
   margin-top: 97px;
 }
-.loading-circle {
+.loading .circle {
   text-align: center;
   margin-top: 44px;
   margin-bottom: 38px;
 }
-.loading-claim {
+.loading .claim {
   text-align: center;
   text-transform: uppercase;
-  font-size: 33px;
+  font-size: 29px;
   font-weight: bold;
   color: #fff;
 }
-.products {
-  position: absolute;
-  top: 880px;
-  color: #141a62;
-}
-.products .products-content {
-  margin-top: 85px;
-}
-.products .diapers-2 {
-  padding-top: 115px;
-  padding-left: 35px;
-}
-.products .diapers-detail img {
-  position: relative;
-  top: -28px;
-  left: -6px;
-}
-.products .diapers-detail .number-circle {
-  position: relative;
-  top: -5px;
-  left: -18px;
-}
-.products .diapers-info .title {
-  font-size: 40px;
-  line-height: 1.03;
-  font-weight: bold;
-}
-.products .diapers-info .weight {
-  font-size: 30px;
-  line-height: 0.9;
-}
-.products .diapers-info .description {
-  font-size: 17px;
-}
-.products .number-circle {
-  font-family: FontoonCom;
-  font-style: roman;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  behavior: url("PIE.htc");
-  width: 40px;
-  height: 40px;
-  padding: 4px;
-  color: #fff;
-  font-size: 25px;
+
+.loading .logo {
   text-align: center;
-  font-weight: normal;
+  margin-top: 97px;
 }
-.products .number-orange {
-  background: #ff8300;
+.loading .circle {
+  text-align: center;
+  margin-top: 44px;
+  margin-bottom: 38px;
 }
-.products .number-yellow {
-  background: #fcd003;
-}
-.products .number-green {
-  background: #72bd44;
-}
-.products .number-pink {
-  background: #d91369;
-}
-.products .number-blue {
-  background: #00aced;
-}
-.products .number-violet {
-  background: #5a3f97;
-}
-.about {
-  position: absolute;
-  top: 2365px;
-}
-.about .headline {
-  padding-left: 41px;
-}
-.about .headline h2 {
-  color: #d91369;
-  font-size: 40px;
-  margin-top: 54px;
-  margin-bottom: 5px;
-  font-family: FontoonCom;
-  font-style: roman;
-}
-.about .headline h3 {
+.loading .claim {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 29px;
+  font-weight: bold;
   color: #fff;
-  font-size: 27px;
-  margin-top: 0px;
-  margin-left: 3px;
-  font-family: FontoonCom;
-  font-style: roman;
 }
-.contact {
-  position: absolute;
-  top: 3964px;
-}
-.footer {
-  position: absolute;
-  top: 4200px;
-}
+
 
 
 /*# sourceMappingURL=app.css.map*/
