--- a/public/includes/loading.html
+++ b/public/includes/loading.html
@@ -1,1 +1,1 @@
-<div class="page-center"><div class="magics-main-logo"><img alt="Magics" src="images/Magics-Logo.png"/></div><div class="loading-circle"><img alt="Magics" src="images/Loading.gif"/></div><div class="loading-claim">The revolutionary thin diaper</div></div>
+<div class="page-center"><div class="logo"><img alt="Magics" src="images/Magics-Logo.png"/></div><div class="circle"><img alt="Magics" src="images/Loading.gif"/></div><div class="claim">The revolutionary thin diaper</div></div>
