menu almost ready, still centering issue

--- a/app/index.jade
+++ b/app/index.jade
@@ -31,13 +31,13 @@ html(class="no-js", lang="en")
 
     // About
     .about
-      include includes/menu
+      //- include includes/menu
       //-   include includes/about
 
 
     // Contact
     .contact
-      include includes/menu
+      //- include includes/menu
       //-   include includes/contact
 
       //- // Footer
