--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -9,17 +9,14 @@ body
   // background url(/images/master.jpg)
   background-position 50% 0
   background-repeat no-repeat
+  height 4000px
 
 
 @import 'loading'
 
 @import 'products'
 
-// // Products
-// .products
-//   position absolute
-//   top 880px
-//   color #141a62
+
 
 //   .products-content
 //     margin-top 85px
