--- a/app/views/styles/_menu.styl
+++ b/app/views/styles/_menu.styl
@@ -1,16 +1,20 @@
-.menu > ul
-  text-transform uppercase
-  font-size 20px
-  font-weight normal
+.menu
   margin 0 auto
-  border-radius 8px
-  background url(/images/Menu-Background.png) no-repeat
-  background-position 50% 50%
-  width 607px
+  width 940px
+
+  ul
+    text-transform uppercase
+    font-size 20px
+    font-weight normal
+    border-radius 8px
+    background url(/images/Menu-Background.png) no-repeat
+    background-position 50% 50%
+    width 607px
+    float left
 
 .menu > ul > li
   padding 11px 7px
-  margin-top 16px
+  margin-top 0px
 
 .menu > ul > li > a
   color #fff
@@ -30,17 +34,19 @@
   background-color #151C64
 
 .menu-magics-logo
-  overflow visible
   float left
-  position relative
-  // top -15px
-  // left 10px
+  margin-right 9px
+// position relative
+//   top -15px
+//   left 10px
 
 .menu-drylock-logo
-  float right
-  position relative
-  // top 11px
-  // right -10px
+  float left
+  margin-left 20px
+//   float right
+// position relative
+//   top 11px
+//   right -10px
 
 // .products-menu
 //   margin-top 263px
