--- a/app/index.jade
+++ b/app/index.jade
@@ -31,14 +31,14 @@ html(class="no-js", lang="en")
 
     // About
     .about
-      //- include includes/menu
-      //-   include includes/about
+      include includes/menu
+      include includes/about
 
 
     // Contact
     .contact
-      //- include includes/menu
-      //-   include includes/contact
+      include includes/menu
+      //- include includes/contact
 
       //- // Footer
       //- .footer.cf
