--- a/app/views/styles/_menu.styl
+++ b/app/views/styles/_menu.styl
@@ -11,6 +11,7 @@
     background-position 50% 50%
     width 607px
     float left
+    margin-top 20px
 
 .menu > ul > li
   padding 11px 7px
@@ -35,14 +36,16 @@
 
 .menu-magics-logo
   float left
-  margin-right 9px
+  margin-right 18px
+  margin-left: 6px;
 // position relative
 //   top -15px
 //   left 10px
 
 .menu-drylock-logo
   float left
-  margin-left 20px
+  margin-left 25px
+  margin-top 30px
 //   float right
 // position relative
 //   top 11px
