--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -17,6 +17,9 @@ body
 @import 'products'
 
 
+@import 'about'
+
+
 
 //   .products-content
 //     margin-top 85px
@@ -75,27 +78,7 @@ body
 
 
 
-// // About
-// .about
-//   position absolute
-//   top 2365px
 
-//   .headline
-//     padding-left 41px
-
-//     h2
-//       color #D91369
-//       font-size 40px
-//       margin-top 54px
-//       margin-bottom 5px
-//       fontoon()
-
-//     h3
-//       color #FFF
-//       font-size 27px
-//       margin-top 0px
-//       margin-left 3px
-//       fontoon()
 
 
 // // Contact
