--- a/app/views/styles/products.styl
+++ b/app/views/styles/products.styl
@@ -1,7 +1,9 @@
 // Products
-// .products
-//   position absolute
-//   overflow hidden
-//   top 880px
-//   color #141a62
-//   height 800px
+.products
+  width 100%
+  top 300px
+  position absolute
+  overflow hidden
+
+  top 860px
+  color #141a62
