basic fixed layout done

--- a/app/index.jade
+++ b/app/index.jade
@@ -40,9 +40,9 @@ html(class="no-js", lang="en")
       include includes/menu
       //- include includes/contact
 
-      //- // Footer
-      //- .footer.cf
-      //-   p All Rights Reserved Drylock Technologies | 2013 -2014 Created by Wercajk
+    // Footer
+    .footer.cf
+      p All Rights Reserved Drylock Technologies | 2013 -2014 Created by Wercajk
 
     script(src='js/app.js', onload='require(\'initialize\');')
     script.
