--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -4,8 +4,8 @@
 @import '_menu'
 
 body
-  // background url(/images/background.jpg)
-  background url(/images/master-color.jpg)
+  background url(/images/background.jpg)
+  // background url(/images/master-color.jpg)
   // background url(/images/master.jpg)
   background-position 50% 0
   background-repeat no-repeat
@@ -16,9 +16,9 @@ body
 
 @import 'products'
 
-
 @import 'about'
 
+@import 'contact'
 
 
 //   .products-content
@@ -81,13 +81,10 @@ body
 
 
 
-// // Contact
-// .contact
-//   position absolute
-//   top 3964px
-
-
-// // Footer
-// .footer
-//   position absolute
-//   top 4200px
+// Footer
+.footer
+  width 100%
+  top 300px
+  position absolute
+  overflow hidden
+  top 4680px
