--- a/public/css/app.css
+++ b/public/css/app.css
@@ -405,179 +405,6 @@ table {
     border-spacing: 0;
 }
 
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Image replacement
- */
-
-.ir {
-    background-color: transparent;
-    border: 0;
-    overflow: hidden;
-    /* IE 6/7 fallback */
-    *text-indent: -9999px;
-}
-
-.ir:before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 100%;
-}
-
-/*
- * Hide from both screenreaders and browsers: h5bp.com/u
- */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-/*
- * Hide only visually, but have it available for screenreaders: h5bp.com/v
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-/*
- * Extends the .visuallyhidden class to allow the element to be focusable
- * when navigated to via the keyboard: h5bp.com/p
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-/*
- * Hide visually and from screenreaders, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/*
- * For IE 6/7 only
- * Include this rule to trigger hasLayout and contain floats.
- */
-
-.clearfix {
-    *zoom: 1;
-}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid required HTTP connection: h5bp.com/r
-   ========================================================================== */
-
-@media print {
-    * {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster: h5bp.com/s */
-        box-shadow:none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    /*
-     * Don't show links for images, or javascript/internal links
-     */
-
-    .ir a:after,
-    a[href^="javascript:"]:after,
-    a[href^="#"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group; /* h5bp.com/t */
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    @page {
-        margin: 0.5cm;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
-
 /*!
  * Bootstrap v3.0.2 by @fat and @mdo
  * Copyright 2013 Twitter, Inc.
@@ -610,7 +437,7 @@ table {
   color: #fff;
   font-size: 27px;
   margin-top: 0px;
-  margin-left: 3px;
+  margin-left: 46px;
 }
 
 * {
@@ -711,7 +538,7 @@ input {
   background-position: 50% 50%;
 }
 body {
-  background: url("/images/master-color.jpg");
+  background: url("/images/background.jpg");
   background-position: 50% 0;
   background-repeat: no-repeat;
   height: 4000px;
@@ -749,7 +576,6 @@ body {
 }
 .about .about-content {
   margin: 0 auto;
-  margin-left: 41px;
   width: 940px;
 }
 .about .about-content h2 {
@@ -757,6 +583,7 @@ body {
   font-size: 40px;
   margin-top: 74px;
   margin-bottom: 5px;
+  margin-left: 41px;
   font-family: FontoonCom;
   font-style: roman;
 }
@@ -764,9 +591,31 @@ body {
   color: #fff;
   font-size: 27px;
   margin-top: 0px;
-  margin-left: 3px;
+  margin-left: 46px;
   font-family: FontoonCom;
   font-style: roman;
+}
+.contact {
+  width: 100%;
+  top: 300px;
+  position: absolute;
+  overflow: hidden;
+  top: 3944px;
+}
+.footer {
+  width: 100%;
+  top: 300px;
+  position: absolute;
+  overflow: hidden;
+  top: 4680px;
+}
+
+.contact {
+  width: 100%;
+  top: 300px;
+  position: absolute;
+  overflow: hidden;
+  top: 3944px;
 }
 
 .loading .logo {
