Finished products page

--- a/app/index.jade
+++ b/app/index.jade
@@ -27,7 +27,7 @@ html(class="no-js", lang="en")
     // Products
     .products
       include includes/menu
-      //- include includes/products
+      include includes/products
 
     // About
     .about
