--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -4,8 +4,8 @@
 @import '_menu'
 
 body
-  background url(/images/background.jpg)
-  // background url(/images/master-color.jpg)
+  // background url(/images/background.jpg)
+  background url(/images/master-color.jpg)
   // background url(/images/master.jpg)
   background-position 50% 0
   background-repeat no-repeat
@@ -19,66 +19,6 @@ body
 @import 'about'
 
 @import 'contact'
-
-
-//   .products-content
-//     margin-top 85px
-
-//   .diapers-2
-//     padding-top 115px
-//     padding-left 35px
-
-//   .diapers-detail img
-//     position relative
-//     top -28px
-//     left -6px
-
-//   .diapers-detail .number-circle
-//     position relative
-//     top -5px
-//     left -18px
-
-//   .diapers-info .title
-//     font-size 40px
-//     line-height 1.03
-//     font-weight bold
-
-//   .diapers-info .weight
-//     font-size 30px
-//     line-height 0.9
-
-//   .diapers-info .description
-//     font-size 17px
-
-//   .number-circle
-//     font-family FontoonCom
-//     font-style roman
-//     border-radius 50%
-//     behavior url(PIE.htc)
-//     width 40px
-//     height 40px
-//     padding 4px
-//     color #fff
-//     font-size 25px
-//     text-align center
-//     font-weight normal
-
-//   .number-orange
-//     background #ff8300
-//   .number-yellow
-//     background #fcd003
-//   .number-green
-//     background #72bd44
-//   .number-pink
-//     background #d91369
-//   .number-blue
-//     background #00aced
-//   .number-violet
-//     background #5a3f97
-
-
-
-
 
 
 // Footer
