--- a/app/includes/products.jade
+++ b/app/includes/products.jade
@@ -1,6 +1,6 @@
 .products-content
   .row
-    .col-md-5.col-md-push-1
+    .col-md-6.diapers-1
       .row.diapers-detail
         .col-md-6
           .diapers-info.text-right
@@ -12,13 +12,13 @@
         .col-md-5
           img(src='images/packshots/Magics_1_fin.png')
 
-    .col-md-5.col-md-push-1.diapers-2
+    .col-md-6.diapers-2
       .row.diapers-detail
-        .col-md-5
+        .col-md-6
           img(src='images/packshots/Magics_2_fin.png')
         .col-md-1
           .number-circle.number-yellow 2
-        .col-md-6.text-left
+        .col-md-5.text-left
           .diapers-info.text-left
             .title MINI
             .weight 3–6 kg
@@ -30,7 +30,7 @@
         .col-md-5
           img(src='images/packshots/Magics_3_fin.png')
         .col-md-1
-          .number-circle.number-yellow 3
+          .number-circle.number-green 3
         .col-md-6.text-left
           .diapers-info.text-left
             .title MIDI
@@ -39,44 +39,51 @@
 
     .col-md-5.col-md-push-1.diapers-4
       .row.diapers-detail
-        .col-md-5
-          img(src='images/packshots/Magics_4_fin.png')
-        .col-md-1
-          .number-circle.number-yellow 4
-        .col-md-6.text-left
-          .diapers-info.text-left
+        .col-md-6.text-right
+          .diapers-info.text-right
             .title MAXI
             .weight 7–18 kg
             .description 29 ultra thin diapers
+        .col-md-1
+          .number-circle.number-pink 4
+        .col-md-5
+          img(src='images/packshots/Magics_4_fin.png')
 
   .row
     .col-md-5.col-md-push-1.diapers-5
       .row.diapers-detail
-        .col-md-5
-          img(src='images/packshots/Magics_5_fin.png')
-        .col-md-1
-          .number-circle.number-yellow 5
-        .col-md-6.text-left
-          .diapers-info.text-left
+        .col-md-6.text-right
+          .diapers-info.text-right
             .title JUNIOR
             .weight 11–25 kg
             .description 27 ultra thin diapers
+        .col-md-1
+          .number-circle.number-blue 5
+        .col-md-5
+          img(src='images/packshots/Magics_5_fin.png')
 
     .col-md-5.col-md-push-1.diapers-6
       .row.diapers-detail
         .col-md-5
           img(src='images/packshots/Magics_6_fin.png')
         .col-md-1
-          .number-circle.number-yellow 6
+          .number-circle.number-violet 6
         .col-md-6.text-left
           .diapers-info.text-left
             .title XL
             .weight 16–30kg
             .description 25 ultra thin diapers
 
-
   .row
-    .col-md-12
-      a(href='http://www.youtube.com/watch?v=-HDieM32pts')
-        img(src='images/Video.png')
-        span Watch our videos!
+    .col-md-5.col-md-push-1.wipes
+      .row.diapers-detail
+        .col-md-12.text-center
+          .diapers-info.text-center
+            .title BABY WIPES
+            .description 64 ultra soft sheets
+          img(src='images/packshots/Magics_wipes.png')
+    .col-md-4.col-md-push-2.text-center.videos
+      .videos-detail.text-center
+        a(href='http://www.youtube.com/watch?v=-HDieM32pts')
+          img(src='images/Video.png')
+          .button Watch our videos!
