--- a/app/views/styles/products.styl
+++ b/app/views/styles/products.styl
@@ -7,3 +7,149 @@
 
   top 860px
   color #141a62
+
+
+.products-content
+  width: 940px;
+  margin: 0 auto;
+
+.products-content > .row
+  margin-top 100px
+  margin-left 0
+  margin-right 0
+
+.diapers-detail .number-circle
+  position relative
+  top -5px
+  left -18px
+
+.diapers-info .title
+  font-size 40px
+  line-height 1.03
+  font-weight bold
+
+.diapers-info .weight
+  font-size 30px
+  line-height 0.9
+
+.diapers-info .description
+  font-size 17px
+
+.number-circle
+  font-family FontoonCom
+  font-style roman
+  border-radius 50%
+  behavior url(PIE.htc)
+  width 40px
+  height 40px
+  padding 4px
+  color #fff
+  font-size 25px
+  text-align center
+  font-weight normal
+
+.diapers-1
+  .diapers-detail
+    position relative
+    top 3px
+    left 65px
+
+    img
+      position relative
+      top -28px
+      left -6px
+
+.diapers-2
+  padding-top 115px
+  padding-left 35px
+
+
+.diapers-3
+  .diapers-detail
+    position relative
+    top -130px
+    left -70px
+
+    img
+      position relative
+      top -28px
+      left -6px
+
+.diapers-4
+  .diapers-detail
+    position relative
+    top -27px
+    left 72px
+
+    img
+      position relative
+      top -28px
+      left -6px
+
+.diapers-5
+  .diapers-detail
+    position relative
+    top -171px
+    left -50px
+
+    img
+      position relative
+      top -28px
+      left 7px
+
+.diapers-6
+  .diapers-detail
+    position relative
+    top 20px
+    left 31px
+
+    img
+      position relative
+      top -15px
+      left -70px
+
+.wipes
+  .diapers-detail
+    position relative
+    top -147px
+    left -29px
+
+    .diapers-info
+      .description
+        font-size 27px
+
+    img
+      position relative
+      top 10px
+      left 5px
+
+.videos
+  .videos-detail
+    position relative
+    top -36px
+    left -15px
+  .button
+    font-size 26px
+    color #fff
+    fontoon()
+    background #D91369
+    border-radius 5px
+    behavior url(PIE.htc)
+    width 220px
+    margin: 0 auto
+  .button:hover
+    text-decoration none
+
+
+.number-orange
+  background #ff8300
+.number-yellow
+  background #fcd003
+.number-green
+  background #72bd44
+.number-pink
+  background #d91369
+.number-blue
+  background #00aced
+.number-violet
+  background #5a3f97
