Finished about page

--- a/app/includes/about.jade
+++ b/app/includes/about.jade
@@ -1,23 +1,62 @@
 .about-content
   h2 World class product innovation
   h3 Revolutionary Technology
-//- .row
-//-   .col-md-12 Drylock
-//-   .col-md-12 original fluffless technology
-//-   .col-md-12
-//-     span Allows for thin, comfortable and highly absorbent products. The thinnest and fastest performance diaper on the market. Products with integrated fluid management system. The product interacts with and responds to the liquid. Breakthrough engineering and product know-how.
-//-     img(src='images/About-Diaper.png')
+  .row.dry-lock-description
+    .col-md-12
+      .row
+        .col-md-8.col-md-push-4
+          .row
+            .col-md-12.text-left
+              h4 Drylock
+              h5 original fluffless technology
+          .row
+            .col-md-3
+              img(src='images/About-Diaper.png')
+            .col-md-7.description-text
+              p Allows for thin, comfortable and highly absorbent products.
+              p The thinnest and fastest performance diaper on the market. Products with integrated fluid management system. The product interacts with and responds to the liquid.
+              p Breakthrough engineering and product know-how.
+              h4 All sizes available
 
-//- .row
-//-   .col-md-12 Ecological Benefits
-//-   .col-md-12
-//-     ul
-//-       li Fluffless diaper: eliminating cellulose saves millions of trees each year.
-//-       li Glueless core: elimination of glue saves tons of chemicals each year.
-//-       li Compactness of diaper: saves packaging material and reduces transportation and warehousing requirements.
-//-     img(src='images/Product-Recycle.png')
 
-//- .row
-//-   .col-md-12 A perfect score. In terms of overall performance, Drylock is superior to all US made diapers. Carlos Richer (2012 STUDY COMPARING DRYLOCK WITH ALL MAIN US BRANDS)
-//-   .col-md-12 Saugt mehr und schneller als herkömmliche Produkte. Hy-TecHygiene Consulting
-//-   .col-md-12 Very good in dryness and absorption. Courtray Consulting Labservice
+  .row.ecology-description
+    .col-md-12
+      .row
+        .col-md-8
+          .row
+            .col-md-12.text-left
+              h4 Ecological Benefits
+          .row
+            .col-md-4
+              img(src='images/Product-Recycle.png')
+            .col-md-7.description-text
+              h5 Fluffless diaper:
+              p eliminating cellulose saves millions of trees each year.
+              h5 Glueless core:
+              p elimination of glue saves tons of chemicals each year.
+              h5 Compactness of diaper:
+              p saves packaging material and reduces transportation and warehousing requirements.
+
+  .row.product-reviews
+    .col-md-12
+      .row
+        .col-md-8.col-md-push-4.product-reviews-content
+          .row
+            .col-md-1
+              img(src='images/Apostrophes.png')
+            .col-md-11
+              em A perfect score. In terms of overall performance, Drylock is superior to all US made diapers.
+              strong Carlos Richer
+              p (2012 STUDY COMPARING DRYLOCK WITH ALL MAIN US BRANDS)
+          .row
+            .col-md-1
+              img(src='images/Apostrophes.png')
+            .col-md-11
+              em Saugt mehr und schneller als herkömmliche Produkte.
+              strong Hy-TecHygiene Consulting
+          .row
+            .col-md-1
+              img(src='images/Apostrophes.png')
+            .col-md-11
+              em Very good in dryness and absorption.
+              strong Courtray Consulting Labservice
