--- a/app/views/styles/about.styl
+++ b/app/views/styles/about.styl
@@ -5,10 +5,42 @@
   position absolute
   overflow hidden
   top 2345px
+  color #fff
 
   .about-content
     margin 0 auto
     width 940px
+
+    .dry-lock-description
+      margin-top: 75px;
+      margin-left: 0px;
+
+      .description-text
+        padding-top 9px
+        color #fff
+
+        p
+          padding-bottom 29px
+
+    .ecology-description
+      margin-top: 117px;
+      margin-left: -5px;
+
+      p
+        color #fff
+        padding-bottom 13px
+
+    .product-reviews
+      margin-top 78px
+      margin-left 193px
+
+      .product-reviews-content > .row
+        margin-bottom 52px
+
+        p,em,strong
+          padding-bottom 0px
+          margin-bottom 2px
+          clearfix()
 
     h2
       color #D91369
@@ -24,3 +56,12 @@
       margin-top 0px
       margin-left 46px
       fontoon()
+
+    h4
+      color #FFF
+      font-size 37px
+
+    h5
+      color #FFF
+      font-size 27px
+      font-weight: normal;
