--- a/app/views/styles/contact.styl
+++ b/app/views/styles/contact.styl
@@ -8,11 +8,11 @@
 
   .contact-form
     position relative
-    background url('/images/Contact-Form-Background.png')
+    background url('/images/Contact-Form-Background.png') no-repeat
     float right
     margin-top 68px
     width 536px
-    height 503px
+    height 530px
 
     input, textarea, button
       position absolute
@@ -45,8 +45,8 @@
       resize none
 
     .send
-      top 445px
-      left 400px
+      top 409px
+      left 380px
 
 
 
