finished all page parts

--- a/app/includes/contact.jade
+++ b/app/includes/contact.jade
@@ -8,6 +8,29 @@
           textarea.message(name="message",rows=6)
           button.send(type="submit")
             img(src="/images/Contact-Form-Submit.png")
+    .col-md-5
+      .contact-address-belgium
+        img.envelope(src="/images/Contact-Envelope.png")
+        img.arroba(src="/images/Contact-Arroba.png")
+        h3 Drylock Technologies NV
+        div Spinnerijstraat 14
+        div 9240 Zele
+        strong Belgium
+        br
+        br
+        a(href="mailto:info@drylock.eu") info@drylock.eu
+      .contact-address-czech
+        img.envelope(src="/images/Contact-Envelope.png")
+        img.arroba(src="/images/Contact-Arroba.png")
+        h3 Drylock Technologies, s.r.o.
+        div Vlámská 801
+        div Hrádek nad Nisou
+        div 463 34
+        strong Czech Republic
+        br
+        br
+        a(href="mailto:info.cz@drylock.eu") info.cz@drylock.eu
+
 
 
 //- div.
