--- a/app/views/styles/products.styl
+++ b/app/views/styles/products.styl
@@ -129,14 +129,15 @@
     top -36px
     left -15px
   .button
-    font-size 26px
+    font-size 23px
     color #fff
     fontoon()
     background #D91369
-    border-radius 5px
+    border-radius 7px
     behavior url(PIE.htc)
-    width 220px
+    width 240px
     margin: 0 auto
+    padding 2px 3px
   .button:hover
     text-decoration none
 
