--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -4,8 +4,8 @@
 @import '_menu'
 
 body
-  // background url(/images/background.jpg)
-  background url(/images/master-color.jpg)
+  background url(/images/background.jpg)
+  // background url(/images/master-color.jpg)
   // background url(/images/master.jpg)
   background-position 50% 0
   background-repeat no-repeat
