--- a/app/views/styles/contact.styl
+++ b/app/views/styles/contact.styl
@@ -18,6 +18,8 @@
       position absolute
       background-color transparent
       border 0
+      color #101151
+      font-size 23px
 
     input:focus,
     select:focus,
@@ -41,12 +43,45 @@
       left 180px
       width 285px
       height 185px
-      line-height 2.3
+      line-height 1.4
       resize none
 
     .send
       top 409px
       left 380px
+
+  h3
+    margin-bottom 3px
+
+  .contact-address-belgium
+    position absolute
+    left 47px
+    top 105px
+
+    .envelope
+      position absolute
+      left -28px
+      top 25px
+
+    .arroba
+      position absolute
+      left -27px
+      top 131px
+
+  .contact-address-czech
+    position absolute
+    left 46px
+    top 279px
+
+    .envelope
+      position absolute
+      left -28px
+      top 25px
+
+    .arroba
+      position absolute
+      left -27px
+      top 149px
 
 
 
