--- a/public/css/app.css
+++ b/public/css/app.css
@@ -580,7 +580,7 @@ input {
   background-position: 50% 50%;
 }
 body {
-  background: url("/images/master-color.jpg");
+  background: url("/images/background.jpg");
   background-position: 50% 0;
   background-repeat: no-repeat;
   height: 4000px;
@@ -722,16 +722,17 @@ body {
   left: -15px;
 }
 .videos .button {
-  font-size: 26px;
+  font-size: 23px;
   color: #fff;
   font-family: FontoonCom;
   font-style: roman;
   background: #d91369;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
+  -webkit-border-radius: 7px;
+  border-radius: 7px;
   behavior: url("PIE.htc");
-  width: 220px;
+  width: 240px;
   margin: 0 auto;
+  padding: 2px 3px;
 }
 .videos .button:hover {
   text-decoration: none;
@@ -848,11 +849,11 @@ body {
 }
 .contact .contact-form {
   position: relative;
-  background: url("/images/Contact-Form-Background.png");
+  background: url("/images/Contact-Form-Background.png") no-repeat;
   float: right;
   margin-top: 68px;
   width: 536px;
-  height: 503px;
+  height: 530px;
 }
 .contact .contact-form input,
 .contact .contact-form textarea,
@@ -860,6 +861,8 @@ body {
   position: absolute;
   background-color: transparent;
   border: 0;
+  color: #101151;
+  font-size: 23px;
 }
 .contact .contact-form input:focus,
 .contact .contact-form select:focus,
@@ -882,12 +885,45 @@ body {
   left: 180px;
   width: 285px;
   height: 185px;
-  line-height: 2.3;
+  line-height: 1.4;
   resize: none;
 }
 .contact .contact-form .send {
-  top: 445px;
-  left: 400px;
+  top: 409px;
+  left: 380px;
+}
+.contact h3 {
+  margin-bottom: 3px;
+}
+.contact .contact-address-belgium {
+  position: absolute;
+  left: 47px;
+  top: 105px;
+}
+.contact .contact-address-belgium .envelope {
+  position: absolute;
+  left: -28px;
+  top: 25px;
+}
+.contact .contact-address-belgium .arroba {
+  position: absolute;
+  left: -27px;
+  top: 131px;
+}
+.contact .contact-address-czech {
+  position: absolute;
+  left: 46px;
+  top: 279px;
+}
+.contact .contact-address-czech .envelope {
+  position: absolute;
+  left: -28px;
+  top: 25px;
+}
+.contact .contact-address-czech .arroba {
+  position: absolute;
+  left: -27px;
+  top: 149px;
 }
 .footer {
   width: 100%;
@@ -918,6 +954,8 @@ body {
   position: absolute;
   background-color: transparent;
   border: 0;
+  color: #101151;
+  font-size: 23px;
 }
 .contact .contact-form input:focus,
 .contact .contact-form select:focus,
@@ -940,12 +978,45 @@ body {
   left: 180px;
   width: 285px;
   height: 185px;
-  line-height: 2.3;
+  line-height: 1.4;
   resize: none;
 }
 .contact .contact-form .send {
   top: 409px;
   left: 380px;
+}
+.contact h3 {
+  margin-bottom: 3px;
+}
+.contact .contact-address-belgium {
+  position: absolute;
+  left: 47px;
+  top: 105px;
+}
+.contact .contact-address-belgium .envelope {
+  position: absolute;
+  left: -28px;
+  top: 25px;
+}
+.contact .contact-address-belgium .arroba {
+  position: absolute;
+  left: -27px;
+  top: 131px;
+}
+.contact .contact-address-czech {
+  position: absolute;
+  left: 46px;
+  top: 279px;
+}
+.contact .contact-address-czech .envelope {
+  position: absolute;
+  left: -28px;
+  top: 25px;
+}
+.contact .contact-address-czech .arroba {
+  position: absolute;
+  left: -27px;
+  top: 149px;
 }
 
 .loading .logo {
@@ -1085,13 +1156,14 @@ body {
   left: -15px;
 }
 .videos .button {
-  font-size: 26px;
+  font-size: 23px;
   color: #fff;
   background: #d91369;
-  border-radius: 5px;
+  border-radius: 7px;
   behavior: url("PIE.htc");
-  width: 220px;
+  width: 240px;
   margin: 0 auto;
+  padding: 2px 3px;
 }
 .videos .button:hover {
   text-decoration: none;
