--- a/public/css/app.css
+++ b/public/css/app.css
@@ -593,6 +593,10 @@ body {
 .clouds img {
   position: absolute;
 }
+.clouds .cloud-1 {
+  left: -125px;
+  top: 573px;
+}
 .clouds .cloud-3 {
   left: 109px;
   top: 555px;
@@ -1055,41 +1059,47 @@ body {
   top: 149px;
 }
 
-.clouds {
+.elements .clouds {
   position: relative;
   margin: 0 auto;
+  width: 100%;
+  height: 1px;
 }
-.clouds img {
+.elements .clouds img {
   position: absolute;
 }
-.clouds .cloud-1 {
+.elements .clouds .cloud-1 {
   left: -125px;
   top: 573px;
 }
-.clouds .cloud-3 {
+.elements .clouds .cloud-2 {
+  left: 314px;
+  top: 726px;
+}
+.elements .clouds .cloud-3 {
   left: 109px;
   top: 555px;
   z-index: 20;
 }
-.clouds .cloud-4 {
+.elements .clouds .cloud-4 {
   left: 283px;
   top: 517px;
   z-index: 0;
 }
-.clouds .cloud-5 {
+.elements .clouds .cloud-5 {
   left: 449px;
   top: 628px;
 }
-.clouds .cloud-7 {
+.elements .clouds .cloud-7 {
   left: 751px;
   top: 525px;
 }
-.clouds .cloud-8 {
+.elements .clouds .cloud-8 {
   left: 1141px;
   top: 520px;
   z-index: 10;
 }
-.clouds .cloud-9 {
+.elements .clouds .cloud-9 {
   left: 1362px;
   top: 539px;
   z-index: 0;
